# paula

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
plans/: ENHANCEMENTS.md  PLAN.md  REALTIME_TRANSCRIPTION.md
src/paula/: __init__.py  cli.py  config.py  history.py
src/paula/audio/: recorder.py  vad.py
src/paula/intent/: ollama_service.py  prompts.py
src/paula/todoist/: client.py
src/paula/transcription/: whisper_service.py
src/paula/utils/: exceptions.py  logging.py
